# vpstreamer-linux

./: CMakeLists.txt  README.txt  image_utils.c  image_utils.h  main.cpp  sharedmem_consumer.c  sharedmem_consumer.h  time_utils.c  time_utils.h  vp_audio_pipe_consumer.cpp  vp_audio_pipe_consumer.h  vp_obs_audio_pipe_source.c  vp_obs_audio_pipe_source.cpp  vp_obs_audio_pipe_source.h  vp_obs_video_shmem_source.c  vp_obs_video_shmem_source.cpp  vp_obs_video_shmem_source.h  vp_render_logger.cpp  vp_render_logger.h
libobs/include/: obsconfig.h
libobs/lib/: libobs-frontend-api.so.0  libobs-frontend-api.so.0.0  libobs-opengl.so.0.0  libobsglad.so.0
obs-plugins/data/obs-ffmpeg/: ffmpeg-mux
